force-app/main/default/objects/Employer_Outreach_Opportunity_Patient__c/Employer_Outreach_Opportunity_Patient__c.object-meta.xml
<CustomObject>
    <label>Employer Outreach Opportunity Patient</label>
    <nameField>
        <label>Employer Outreach Opportunity Patient</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employer Outreach Opportunity Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>