force-app/main/default/objects/Employer_Outreach_Opportunity_Patient__c/fields/Employer_Outreach_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Employer_Outreach_Opportunity__c</fullName>
    <label>Employer Outreach Opportunity</label>
    <referenceTo>Employer_Outreach_Opportunity__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Employer_Outreach_Opportunity_Patients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>