force-app/main/default/objects/Employer_Outreach_Opportunity_Patient__c/fields/Employer_Outreach_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Employer_Outreach_Opportunity_Id__c</fullName>
    <formula>Employer_Outreach_Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Outreach Opportunity Id</label>
    <type>Text</type>
</CustomField>