force-app/main/default/objects/Employer_Outreach_Opportunity_Patient__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer Outreach Opportunities</relationshipLabel>
    <relationshipName>Employer_Outreach_Opportunity_Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>