force-app/main/default/objects/Employer_Outreach_Opportunity_Patient__c/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <formula>Patient__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Id</label>
    <type>Text</type>
</CustomField>